8255717: Fix JFR crash in WriteObjectSampleStacktrace due to object not initialized Reviewed-by: phh